{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 33,
  "lineage": "fd79fde8-f0d2-bab8-cc15-86685118ccaa",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839950285905:security-group/sg-0712a621531c52af8",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0712a621531c52af8",
            "ingress": [],
            "name": "weather-logger-cluster-sg",
            "name_prefix": "",
            "owner_id": "839950285905",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "weather-logger-cluster-sg",
              "Project": "weather-logger"
            },
            "tags_all": {
              "Name": "weather-logger-cluster-sg",
              "Project": "weather-logger"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e617b7c02ba79c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a95fea74a4056bfa",
            "arn": "arn:aws:ec2:us-east-1:839950285905:elastic-ip/eipalloc-0a95fea74a4056bfa",
            "association_id": "eipassoc-053ba609a789c5755",
            "domain": "vpc",
            "id": "eipalloc-0a95fea74a4056bfa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e804997f1df32da4",
            "private_dns": "ip-10-0-0-247.ec2.internal",
            "private_ip": "10.0.0.247",
            "public_dns": "ec2-3-219-236-135.compute-1.amazonaws.com",
            "public_ip": "3.219.236.135",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "weather-logger-nat-eip-0",
              "Project": "weather-logger"
            },
            "tags_all": {
              "Name": "weather-logger-nat-eip-0",
              "Project": "weather-logger"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0212c180a4498705c",
            "arn": "arn:aws:ec2:us-east-1:839950285905:elastic-ip/eipalloc-0212c180a4498705c",
            "association_id": "eipassoc-07f5c471fd41f8b71",
            "domain": "vpc",
            "id": "eipalloc-0212c180a4498705c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b61d31f5c6df5888",
            "private_dns": "ip-10-0-1-59.ec2.internal",
            "private_ip": "10.0.1.59",
            "public_dns": "ec2-52-200-9-178.compute-1.amazonaws.com",
            "public_ip": "52.200.9.178",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "weather-logger-nat-eip-1",
              "Project": "weather-logger"
            },
            "tags_all": {
              "Name": "weather-logger-nat-eip-1",
              "Project": "weather-logger"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839950285905:internet-gateway/igw-04eda2c190d217bc6",
            "id": "igw-04eda2c190d217bc6",
            "owner_id": "839950285905",
            "tags": {
              "Name": "weather-logger-igw",
              "Project": "weather-logger"
            },
            "tags_all": {
              "Name": "weather-logger-igw",
              "Project": "weather-logger"
            },
            "vpc_id": "vpc-05e617b7c02ba79c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a95fea74a4056bfa",
            "association_id": "eipassoc-053ba609a789c5755",
            "connectivity_type": "public",
            "id": "nat-0244c75ddb8654359",
            "network_interface_id": "eni-0e804997f1df32da4",
            "private_ip": "10.0.0.247",
            "public_ip": "3.219.236.135",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fee9a34c9a6069da",
            "tags": {
              "Name": "weather-logger-nat-us-east-1a",
              "Project": "weather-logger"
            },
            "tags_all": {
              "Name": "weather-logger-nat-us-east-1a",
              "Project": "weather-logger"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0212c180a4498705c",
            "association_id": "eipassoc-07f5c471fd41f8b71",
            "connectivity_type": "public",
            "id": "nat-012cbd3ee4a1d9fef",
            "network_interface_id": "eni-0b61d31f5c6df5888",
            "private_ip": "10.0.1.59",
            "public_ip": "52.200.9.178",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dc831f4aa8715e9b",
            "tags": {
              "Name": "weather-logger-nat-us-east-1b",
              "Project": "weather-logger"
            },
            "tags_all": {
              "Name": "weather-logger-nat-us-east-1b",
              "Project": "weather-logger"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839950285905:route-table/rtb-017cec784db4135d8",
            "id": "rtb-017cec784db4135d8",
            "owner_id": "839950285905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0244c75ddb8654359",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "weather-logger-private-rt-us-east-1a",
              "Project": "weather-logger"
            },
            "tags_all": {
              "Name": "weather-logger-private-rt-us-east-1a",
              "Project": "weather-logger"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e617b7c02ba79c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839950285905:route-table/rtb-04e32892f6d0d349e",
            "id": "rtb-04e32892f6d0d349e",
            "owner_id": "839950285905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-012cbd3ee4a1d9fef",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "weather-logger-private-rt-us-east-1b",
              "Project": "weather-logger"
            },
            "tags_all": {
              "Name": "weather-logger-private-rt-us-east-1b",
              "Project": "weather-logger"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e617b7c02ba79c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839950285905:route-table/rtb-0e19f08d37c8f87b1",
            "id": "rtb-0e19f08d37c8f87b1",
            "owner_id": "839950285905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04eda2c190d217bc6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "weather-logger-public-rt",
              "Project": "weather-logger"
            },
            "tags_all": {
              "Name": "weather-logger-public-rt",
              "Project": "weather-logger"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e617b7c02ba79c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a219cfe3a0b1d88c",
            "route_table_id": "rtb-017cec784db4135d8",
            "subnet_id": "subnet-0b6089b1b932a271f"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e1a280e02b5fe6c",
            "route_table_id": "rtb-04e32892f6d0d349e",
            "subnet_id": "subnet-02ef7f1ec9a005423"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049a57dd3fa93360f",
            "route_table_id": "rtb-0e19f08d37c8f87b1",
            "subnet_id": "subnet-0fee9a34c9a6069da"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018096773ca5fd929",
            "route_table_id": "rtb-0e19f08d37c8f87b1",
            "subnet_id": "subnet-0dc831f4aa8715e9b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839950285905:subnet/subnet-0b6089b1b932a271f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6089b1b932a271f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839950285905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weather-logger-private-us-east-1a",
              "Project": "weather-logger",
              "kubernetes.io/cluster/weather-logger-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "weather-logger-private-us-east-1a",
              "Project": "weather-logger",
              "kubernetes.io/cluster/weather-logger-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05e617b7c02ba79c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839950285905:subnet/subnet-02ef7f1ec9a005423",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ef7f1ec9a005423",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839950285905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weather-logger-private-us-east-1b",
              "Project": "weather-logger",
              "kubernetes.io/cluster/weather-logger-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "weather-logger-private-us-east-1b",
              "Project": "weather-logger",
              "kubernetes.io/cluster/weather-logger-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05e617b7c02ba79c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839950285905:subnet/subnet-0fee9a34c9a6069da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fee9a34c9a6069da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839950285905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weather-logger-public-us-east-1a",
              "Project": "weather-logger",
              "kubernetes.io/cluster/weather-logger-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "weather-logger-public-us-east-1a",
              "Project": "weather-logger",
              "kubernetes.io/cluster/weather-logger-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05e617b7c02ba79c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839950285905:subnet/subnet-0dc831f4aa8715e9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc831f4aa8715e9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839950285905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weather-logger-public-us-east-1b",
              "Project": "weather-logger",
              "kubernetes.io/cluster/weather-logger-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "weather-logger-public-us-east-1b",
              "Project": "weather-logger",
              "kubernetes.io/cluster/weather-logger-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05e617b7c02ba79c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839950285905:vpc/vpc-05e617b7c02ba79c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7ef7aa5141f3bfa",
            "default_route_table_id": "rtb-0a5a9bb9f8dd125c8",
            "default_security_group_id": "sg-01dbec80354109114",
            "dhcp_options_id": "dopt-0e4761084a0e20cc5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e617b7c02ba79c0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5a9bb9f8dd125c8",
            "owner_id": "839950285905",
            "tags": {
              "Name": "weather-logger-vpc",
              "Project": "weather-logger"
            },
            "tags_all": {
              "Name": "weather-logger-vpc",
              "Project": "weather-logger"
            }
          }
        }
      ]
    }
  ]
}